feat: add option to attach a task to each posted comment
Bitbucket Cloud's Tasks API (already used by
bitbucket-cloud-java-rest-api:3.2.3, RepositoriesApi's tasks
endpoints) lets a task be anchored to a comment, requiring it to be
resolved rather than just read. Add withCreateCommentTasks(true)
(default false, existing behavior unchanged) to createComment() and
createSingleFileComment(), posting a task right after the comment
when enabled.

removeComments() also needs to change for this: confirmed live
against a real PR (https://bitbucket.org/tomasbjerre/violations-test/pull-requests/1)
that resolving a comment does NOT cascade to resolve its task - a
resolved comment's task stayed UNRESOLVED. So getComments() now also
fetches the PR's tasks and threads each comment's task id through via
Comment.specifics, and removeComments() resolves the task instead of
the comment whenever one is attached (task resolution confirmed
idempotent live - safe to call unconditionally, no 409 handling
needed unlike comment resolution).

Getting the task's anchor comment id required working around a real
bug in bitbucket-cloud-java-rest-api: the nested comment reference a
task embeds omits Bitbucket's usual "type" discriminator, which the
generated Comment model requires, so it silently deserialized to
null. Fixed at the root in
https://github.com/tomasbjerre/bitbucket-cloud-java-rest-api/pull/7,
but that needs a new release; PullrequestCommentTaskMixin works
around it here in the meantime by relaxing that one property's
polymorphism and required-field constraint, and can be dropped once
this dependency is upgraded past the fix.

All new fixtures are real captures from
https://bitbucket.org/tomasbjerre/violations-test/pull-requests/1,
including task-state-after-comment-resolved.json, which documents the
resolve-doesn't-cascade finding above.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>